# precommit_imagesize

./: .pre-commit-hooks.yaml  README.md  precommit_imagesize.py  pyproject.toml
